# contracts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
agent-registry/: Cargo.toml
agent-registry/src/: lib.rs
docs/explanation/: registry-pattern.md  stylus-architecture.md
docs/how-to/: add-a-protocol.md
docs/reference/: contracts.md  test-patterns.md
docs/tutorials/: deploy-to-testnet.md  getting-started.md
liquidation-monitor/: Cargo.toml
liquidation-monitor/src/: lib.rs
payment-receiver/: .gitmodules  foundry.toml
payment-receiver/script/: Deploy.s.sol
payment-receiver/src/: PaymentReceiver.sol
payment-receiver/test/: PaymentReceiver.t.sol
route-optimizer/: Cargo.toml
route-optimizer/src/: lib.rs
timeboost-vault/: Cargo.toml
timeboost-vault/src/: lib.rs
